# Omega

./: DoSetup.hs  LICENSE  Makefile.in  Omega.cabal  README  Setup.hs  configure.ac
Data/Omega/: Expr.hs  LowLevel.hsc  Parse.hs  Rel.hs  Set.hs
Data/Presburger/Omega/: Expr.hs  LowLevel.hsc  Parse.hs  Pretty.hs  Rel.hs  Set.hs  SetRel.hs
Data/Presburger/Omega/Internal/: Arbitrary.hs  Expr.hs  Lexer.x  Parser.y  ShowExpr.hs  ShowExprOld.hs  ShowUtil.hs
src/: C_omega.cc  C_omega.h
test/: TestExpr.hs  TestRel.hs  TestSet.hs  runtests.hs
