Name:			Omega
Version:		0.1.1
Cabal-Version:		>= 1.2
Build-Type:		Custom
License:		OtherLicense
License-File:		LICENSE
Author:			Christopher Rodrigues
Maintainer:		cirodig@illinois.edu
Stability:		Alpha
Synopsis:		A library for manipulating Presburger arithmetic formulae
Description:
        This package provides tools for performing logical
        operations on sets and relations whose members can be represented
        compactly as a Presburger arithmetic formula.

        The Omega library must be installed to build this package.  It can
        be downloaded from
        http:\/\/github.com\/davewathaverford\/the-omega-project using git.
Category:		Data
Extra-Source-Files:	configure.ac Makefile.in src/C_omega.h src/C_omega.cc
Extra-Tmp-Files:	build/C_omega.o

Library
  Build-Depends:	base, containers
  Exposed-Modules:
        Data.Presburger.Omega
        Data.Presburger.Omega.Expr
        Data.Presburger.Omega.SetRel
        Data.Presburger.Omega.Set
        Data.Presburger.Omega.Rel
        Data.Presburger.Omega.LowLevel
  Extensions:		GADTs ScopedTypeVariables
  Build-Tools:		hsc2hs
  Include-Dirs:		src
  Extra-Libraries:	omega stdc++
