Cabal-Version:		>= 1.9.2
Name:			Omega
Version:		2.0.0
Build-Type:		Custom
License:		BSD3
License-File:		LICENSE
Author:			Christopher Rodrigues
Maintainer:		cirodrig@illinois.edu
Stability:		Alpha
Synopsis:		Integer sets and relations using Presburger arithmetic
Description:
        This package provides a way to construct, transform, and query
        formulas in Presburger arithmetic, which can express integer linear
        equality and inequality constraints.  The Omega library is used to
        solve problems.

        The main data structures are sets of tuples of integers, provided in
        "Data.Presburger.Omega.Set", and relations on tuples of integers,
        provided in "Data.Presburger.Omega.Rel".  Formulas are created using
        the functions in "Data.Presburger.Omega.Expr".
Category:		Data
Extra-Source-Files:
	README
	aclocal.m4
	configure.ac
        configure
	Makefile.in
        DoSetup.hs
	src/C_omega.cc
	src/C_omega.h
	src/the-omega-project.tar.gz
Extra-Tmp-Files:	build/C_omega.o
Tested-With:            GHC ==7.4.1, GHC ==7.6.3

Flag UseInstalledOmega
  Description:		Link to a preinstalled version of the Omega library
  Default:		False

Library
  Build-Depends:	base >= 4 && < 5, array, containers, QuickCheck >= 2.4.1
  Build-Tools:          alex, happy
  Exposed-Modules:
        Data.Presburger.Omega.Expr
        Data.Presburger.Omega.LowLevel
        Data.Presburger.Omega.Set
        Data.Presburger.Omega.Rel
        Data.Presburger.Omega.Internal.Parser
        Data.Presburger.Omega.Internal.Lexer
  Other-Modules:
        Data.Presburger.Omega.SetRel
        Data.Presburger.Omega.Internal.Arbitrary
        Data.Presburger.Omega.Internal.Expr
        Data.Presburger.Omega.Internal.ShowExpr
        Data.Presburger.Omega.Internal.ShowUtil
  Extensions:		GADTs ScopedTypeVariables
  Build-Tools:		hsc2hs
  Include-Dirs:		src

  if flag(UseInstalledOmega)
    Extra-Libraries:	omega stdc++
  else
    Extra-Libraries:	stdc++

Test-Suite test-Omega
  Type:                 exitcode-stdio-1.0
  main-is:              runtests.hs
  Build-Depends:	base >= 4 && < 5, array, containers, QuickCheck >= 2.4.1, HUnit
  Build-Tools:          alex, happy
  Other-Modules:
        Data.Presburger.Omega.Expr
        Data.Presburger.Omega.LowLevel
        Data.Presburger.Omega.Set
        Data.Presburger.Omega.Rel
        Data.Presburger.Omega.SetRel
        Data.Presburger.Omega.Internal.Parser
        Data.Presburger.Omega.Internal.Lexer
        Data.Presburger.Omega.Internal.Arbitrary
        Data.Presburger.Omega.Internal.Expr
        Data.Presburger.Omega.Internal.ShowExpr
        Data.Presburger.Omega.Internal.ShowUtil
        TestExpr
        TestSet
        TestRel
  Extensions:		GADTs ScopedTypeVariables
  Build-Tools:		hsc2hs
  Hs-Source-Dirs:       . test
  Include-Dirs:		src
  if flag(UseInstalledOmega)
    Extra-Libraries:	omega stdc++
  else
    Extra-Libraries:	stdc++
